fixed scrollbar styling on search box

--- a/client/src/app/navbar/search-box/search-box.component.css
+++ b/client/src/app/navbar/search-box/search-box.component.css
@@ -58,7 +58,10 @@ input{
     font-size: 14px;
 }
 
-
+.overflow-scroll{
+    max-height: 200px;
+    overflow-y: scroll;
+}
 
 
 .nav-options{
@@ -72,7 +75,7 @@ input{
     box-shadow: 0 2px 4px 0px rgba(0, 0, 0, 0.5);
 
     max-height: 200px;
-    overflow-y: scroll;
+    overflow: hidden;
 }
 .nav-option{
     display: flex;
